fix: User control panel

--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -171,7 +171,7 @@
                     </li>
                     <li id="header_dashboard" class="app-sidebar__heading">System</li>
                     <li>
-                        <a id="li_users" href="{{url_for('bp_admin.dashboard')}}" class="">
+                        <a id="li_users" href="{{url_for('bp_auth.users')}}" class="">
                             <i class="metismenu-icon pe-7s-graph2 icon-gradient bg-premium-dark" aria-hidden="true"></i>
                             Users
                         </a>
