fix: On Expenses separate Salary and Rebates Category

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -34,7 +34,8 @@
                                             <option value="">Choose...</option>
                                             <option value="utilities">Utilities</option>
                                             <option value="office_supply">Office Supply</option>
-                                            <option value="salary_and_rebates">Salary and Rebates</option>
+                                            <option value="salary">Salary</option>
+                                            <option value="rebates">Rebates</option>
                                             <option value="other_expenses">Other Expenses</option>
                                         </select>
                                     </div>
