--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -91,6 +91,10 @@
                 "dataSrc": function(json){
                     $("#total_fund_wallet").html("₱" + json.totalFundWallet);
                     return json.data;
+                },
+                "data": function(d) {
+                    d.date_from = $("#filter_date_from").val();
+                    d.date_to = $("#filter_date_to").val();
                 }
             },
             "pageLength": 25,
@@ -112,6 +116,10 @@
                 "dataSrc": function(json){
                     $("#total_fund_wallet").html("₱" + json.totalFundWallet);
                     return json.data;
+                },
+                "data": function(d) {
+                    d.date_from = $("#filter_tab2_date_from").val();
+                    d.date_to = $("#filter_tab2_date_to").val();
                 }
             },
             "pageLength": 25,
@@ -136,6 +144,10 @@
                     $("#total_salaries_and_rebates").html("₱" + json.totalSalariesAndRebates);
                     $("#total_other_expenses").html("₱" + json.totalOtherExpenses);
                     return json.data;
+                },
+                "data": function(d) {
+                    d.date_from = $("#filter_tab3_date_from").val();
+                    d.date_to = $("#filter_tab3_date_to").val();
                 }
             },
             "pageLength": 25,
@@ -379,7 +391,6 @@
                     swal("Error Occured!", "Please select branch first!", "info");
                     return;
                 }
-                
                 getContactPersons();
 
                 $("#label_description").html('Contact Person');
@@ -465,6 +476,32 @@
                 $("#amount_received").rules('add', {'required': true});
                 $("#remarks").rules('add', {'required': true});
             }
+        });
+
+        // FILTERS
+
+        $('#filter_date_from').change(function() {
+            dtbl_fund_wallet_statements.ajax.reload();
+        });
+    
+        $('#filter_date_to').change(function() {
+            dtbl_fund_wallet_statements.ajax.reload();
+        });
+
+        $('#filter_tab2_date_from').change(function() {
+            dtbl_add_funds_transactions.ajax.reload();
+        });
+    
+        $('#filter_tab2_date_to').change(function() {
+            dtbl_add_funds_transactions.ajax.reload();
+        });
+
+        $('#filter_tab3_date_from').change(function() {
+            dtbl_expenses_transactions.ajax.reload();
+        });
+    
+        $('#filter_tab3_date_to').change(function() {
+            dtbl_expenses_transactions.ajax.reload();
         });
     });
 </script>
@@ -680,6 +717,20 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane show active" id="tab-animated1-0" role="tabpanel">
+                            <div class="form-row">
+                                <div class="col-md-2 col-xs-2">
+                                    <div class="position-relative form-group">
+                                        <label for="filter_date_from" class="">Date From</label>
+                                        <input id="filter_date_from" type="date" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-xs-2">
+                                    <div class="position-relative form-group">
+                                        <label for="filter_date_to" class="">Date To</label>
+                                        <input id="filter_date_to" type="date" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
                             <div style="margin-top: 10px;" class="table-responsive">
                                 <table id="tbl_fund_wallet_statements"
                                     class="align-middle mb-0 table table-bordered table-striped table-hover">
@@ -700,6 +751,20 @@
                             </div>
                         </div>
                         <div class="tab-pane show" id="tab-animated1-1" role="tabpanel">
+                            <div class="form-row">
+                                <div class="col-md-2 col-xs-2">
+                                    <div class="position-relative form-group">
+                                        <label for="filter_tab2_date_from" class="">Date From</label>
+                                        <input id="filter_tab2_date_from" type="date" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-xs-2">
+                                    <div class="position-relative form-group">
+                                        <label for="filter_tab2_date_to" class="">Date To</label>
+                                        <input id="filter_tab2_date_to" type="date" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
                             <div style="margin-top: 10px;" class="table-responsive">
                                 <table id="tbl_add_funds_transactions" class="align-middle mb-0 table table-bordered table-striped table-hover">
                                     <thead>
@@ -723,6 +788,20 @@
                             </div>
                         </div>
                         <div class="tab-pane show" id="tab-animated1-2" role="tabpanel">
+                            <div class="form-row">
+                                <div class="col-md-2 col-xs-2">
+                                    <div class="position-relative form-group">
+                                        <label for="filter_tab3_date_from" class="">Date From</label>
+                                        <input id="filter_tab3_date_from" type="date" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-xs-2">
+                                    <div class="position-relative form-group">
+                                        <label for="filter_tab3_date_to" class="">Date To</label>
+                                        <input id="filter_tab3_date_to" type="date" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
                             <div style="margin-top: 10px;" class="table-responsive">
                                 <table id="tbl_expenses_transactions" class="align-middle mb-0 table table-bordered table-striped table-hover">
                                     <thead>
