--- a/prime_admin/templates/lms/earnings_admin.html
+++ b/prime_admin/templates/lms/earnings_admin.html
@@ -512,10 +512,10 @@
                     <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <button id="btndelete" type="button" tabindex="0" class="dropdown-item">Member Records</button>
+                                <button disabled id="btndelete" type="button" tabindex="0" class="dropdown-item">Member Records</button>
                             </li>
                             <li class="nav-item">
-                                <button id="btndelete" type="button" tabindex="0" class="dropdown-item">Payment Records</button>
+                                <button disabled id="btndelete" type="button" tabindex="0" class="dropdown-item">Payment Records</button>
                             </li>
                             <li class="nav-item">
                                 <button id="btn_print_available_earnings" type="button" tabindex="0" class="dropdown-item">Marketer's Earnings</button>
