--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -139,8 +139,8 @@
         });
 
 
-        var dtbl_expenses_transactions = $("#tbl_expenses_transactions").DataTable({
-            "dom": 'rtip',
+        var dtbl_business_expenses = $("#tbl_business_expenses").DataTable({
+            "dom": '',
             "processing": true,
             "autoWidth": false,
             "serverSide": true,
@@ -154,10 +154,7 @@
                     return json.data;
                 },
                 "data": function(d) {
-                    d.date_from = $("#filter_tab3_date_from").val();
-                    d.date_to = $("#filter_tab3_date_to").val();
-                    d.category = $("#filter_tab3_category").val();
-                    d.description = $("#filter_tab3_description").val();
+                    d.year = $("#filter_tab3_year").val();
                 }
             },
             "pageLength": 25,
@@ -186,7 +183,7 @@
 
             dtbl_fund_wallet_statements.ajax.url(`/learning-management/branches/${branchId}/fund-wallet-statements/dt`).load();
             dtbl_add_funds_transactions.ajax.url(`/learning-management/branches/${branchId}/add-funds-transactions/dt`).load();
-            dtbl_expenses_transactions.ajax.url(`/learning-management/branches/${branchId}/expenses-transactions/dt`).load();
+            dtbl_business_expenses.ajax.url(`/learning-management/branches/${branchId}/expenses-transactions/dt`).load();
         });
 
 
@@ -242,7 +239,7 @@
 
                                 dtbl_fund_wallet_statements.ajax.reload();
                                 dtbl_add_funds_transactions.ajax.reload();
-                                dtbl_expenses_transactions.ajax.reload();
+                                dtbl_business_expenses.ajax.reload();
                                 swal("Success!", response.message, "success");
                                 $("#mdl_add_fund .close").click()
                                 clearCreateModal();
@@ -318,7 +315,7 @@
 
                                 dtbl_fund_wallet_statements.ajax.reload();
                                 dtbl_add_funds_transactions.ajax.reload();
-                                dtbl_expenses_transactions.ajax.reload();
+                                dtbl_business_expenses.ajax.reload();
                                 swal("Success!", response.message, "success");
                                 $("#mdl_add_expenses .close").click()
                                 clearCreateModal();
@@ -507,11 +504,11 @@
         });
 
         $('#filter_tab3_date_from').change(function() {
-            dtbl_expenses_transactions.ajax.reload();
+            dtbl_business_expenses.ajax.reload();
         });
     
         $('#filter_tab3_date_to').change(function() {
-            dtbl_expenses_transactions.ajax.reload();
+            dtbl_business_expenses.ajax.reload();
         });
 
         $('#filter_category').change(function() {
@@ -553,7 +550,7 @@
         });
 
         $('#filter_tab3_category').change(function() {
-            dtbl_expenses_transactions.ajax.reload();
+            dtbl_business_expenses.ajax.reload();
 
             var selectedCategory = $(this).val();
 
@@ -595,8 +592,39 @@
         });
 
         $('#filter_tab3_description').change(function() {
-            dtbl_expenses_transactions.ajax.reload();
+            dtbl_business_expenses.ajax.reload();
         });
+
+        $('#filter_tab3_year').change(function() {
+            dtbl_business_expenses.ajax.reload();
+        });
+
+        // BUSINESS EXPENSES TABS
+        var dtbl_utilities = $("#tbl_utilities").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/branches/all/utilities/dt",
+                "dataSrc": function(json){
+                    $("#total_utilities_tab").html("₱" + json.totalUtilities);
+                    return json.data;
+                },
+                "data": function(d) {
+                    //d.date_from = $("#filter_tab2_date_from").val();
+                    //d.date_to = $("#filter_tab2_date_to").val();
+                }
+            },
+            "pageLength": 25,
+            "ordering": false,
+            "order": [[ 0, 'asc' ]],
+            "columnDefs": [
+            ],
+            "order": [[1, 'asc']],
+        });
+
+        
     });
 </script>
 {% endblock %}
@@ -727,7 +755,7 @@
                     </div>
                 </div>
             </div>
-
+<!-- 
             <div class="row">
                 <div class="col-lg-6 col-xl-6">
                     <div class="card mb-3 widget-content">
@@ -755,9 +783,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-6 col-xl-6">
                     <div class="card mb-3 widget-content">
                         <div class="widget-content-wrapper">
@@ -784,7 +812,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
             <div class="mb-12 card">
@@ -805,7 +833,7 @@
                         <li class="nav-item">
                             <a role="tab" class="nav-link show" id="tab-c1-2" data-toggle="tab" href="#tab-animated1-2"
                                 aria-selected="true">
-                                <span class="nav-text">EXPENSES TRANSACTIONS</span>
+                                <span class="nav-text">BUSINESS EXPENSES</span>
                             </a>
                         </li>
                     </ul>
@@ -904,7 +932,7 @@
                         </div>
                         <div class="tab-pane show" id="tab-animated1-2" role="tabpanel">
                             <div class="form-row">
-                                <div class="col-md-2 col-xs-2">
+                                <!-- <div class="col-md-2 col-xs-2">
                                     <div class="position-relative form-group">
                                         <label for="filter_tab3_date_from" class="">Date From</label>
                                         <input id="filter_tab3_date_from" type="date" class="form-control">
@@ -915,48 +943,143 @@
                                         <label for="filter_tab3_date_to" class="">Date To</label>
                                         <input id="filter_tab3_date_to" type="date" class="form-control">
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-md-2 col-xs-2">
                                     <div class="position-relative form-group">
-                                        <label for="filter_tab3_category" class="">Category</label>
-                                        <select id="filter_tab3_category" class="form-control" required>
-                                            <option value="">Choose...</option>
-                                            <option value="utilities">Utilities</option>
-                                            <option value="office_supply">Office Supply</option>
-                                            <option value="salary">Salary</option>
-                                            <option value="rebates">Rebates</option>
-                                            <option value="other_expenses">Other Expenses</option>
+                                        <label for="filter_tab3_year" class="">Year</label>
+                                        <select id="filter_tab3_year" class="form-control" required>
+                                            <option value="all">All</option>
+                                            <option value="2022">2022</option>
+                                            <option value="2021">2021</option>
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-md-2 col-xs-2">
+                                <!-- <div class="col-md-2 col-xs-2">
                                     <div class="position-relative form-group">
                                         <label for="filter_tab3_description" class="">Description</label>
                                         <select id="filter_tab3_description" class="form-control" required>
                                             <option value="">Choose category first...</option>
                                         </select>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div style="margin-top: 10px;" class="table-responsive">
-                                <table id="tbl_expenses_transactions" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                                <table id="tbl_business_expenses" class="align-middle mb-0 table table-bordered table-hover">
                                     <thead>
                                         <tr>
-                                            <th class="text-center">DATE</th>
                                             <th class="text-center">CATEGORY</th>
-                                            <th class="text-center">DESCRIPTION</th>
-                                            <th class="text-center">ACCOUNT NO. / PARTICULAR</th>
-                                            <th class="text-center">UNIT PRICE</th>
-                                            <th class="text-center">QTY</th>
-                                            <th class="text-center">BILLING MONTH</th>
-                                            <th class="text-center">SETTLED BY</th>
-                                            <th class="text-center">TOTAL AMOUNT DUE</th>
-                                            <th class="text-center">REMARKS</th>
+                                            <th class="text-center">JAN</th>
+                                            <th class="text-center">FEB</th>
+                                            <th class="text-center">MAR</th>
+                                            <th class="text-center">APR</th>
+                                            <th class="text-center">MAY</th>
+                                            <th class="text-center">JUNE</th>
+                                            <th class="text-center">JULY</th>
+                                            <th class="text-center">AUGUST</th>
+                                            <th class="text-center">SEPTEMBER</th>
+                                            <th class="text-center">OCTOBER</th>
+                                            <th class="text-center">NOVEMBER</th>
+                                            <th class="text-center">DECEMBER</th>
+                                            <th class="text-center">TOTAL</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                     </tbody>
                                 </table>
+                            </div>
+
+                            <div class="main-card mb-3 card" style="margin-top: 20px;">
+                                <div class="card-header"><i class="header-icon lnr-gift icon-gradient bg-grow-early"> </i>Utilities
+                                    <div class="btn-actions-pane-right">
+                                        <div class="nav">
+                                            <a data-toggle="tab" href="#tab-eg6-0" class="border-0 btn-transition btn btn-outline-primary active show">
+                                                UTILITIES
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-1" class="mr-1 ml-1 border-0 btn-transition btn btn-outline-primary show">
+                                                OFFICE SUPPLY
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-2" class="border-0 btn-transition  btn btn-outline-primary">
+                                                SALARIES
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-2" class="border-0 btn-transition  btn btn-outline-primary">
+                                                MARKETER REBATES
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-2" class="border-0 btn-transition  btn btn-outline-primary">
+                                                BOOKEPER
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-2" class="border-0 btn-transition  btn btn-outline-primary">
+                                                REFUNDED
+                                            </a>
+                                            <a data-toggle="tab" href="#tab-eg6-2" class="border-0 btn-transition  btn btn-outline-primary">
+                                                OTHER EXPENSES
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <div class="tab-content">
+                                        <div class="tab-pane active show" id="tab-eg6-0" role="tabpanel">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-xl-4">
+                                                </div>
+                                                <div class="col-lg-4 col-xl-4">
+                                                    <div class="card mb-3 widget-content">
+                                                        <div class="widget-content-wrapper">
+                                                            <div class="widget-content-left">
+                                                                <div class="widget-heading">Total</div>
+                                                                <div class="widget-subheading"></div>
+                                                            </div>
+                                                            <div class="widget-content-right">
+                                                                <div class="widget-numbers text-success"><span id="total_utilities_tab">₱ 0.00</span></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-xl-4">
+                                                </div>
+                                            </div>
+                                            <!-- <div class="form-row">
+                                                <div class="col-md-2 col-xs-2">
+                                                    <div class="position-relative form-group">
+                                                        <label for="filter_tab3_category" class="">Year</label>
+                                                        <select id="filter_tab3_category" class="form-control" required>
+                                                            <option value="">Choose...</option>
+                                                            <option value="">2022</option>
+                                                            <option value="">2021</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div> -->
+                                            <div style="margin-top: 10px;" class="table-responsive">
+                                                <table id="tbl_utilities" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                                                    <thead>
+                                                        <tr>
+                                                            <th class="text-center">DATE</th>
+                                                            <th class="text-center">PARTICULARS</th>
+                                                            <th class="text-center">ACCOUNT NO. | PARTICULAR NO.</th>
+                                                            <th class="text-center">BILLING MONTH</th>
+                                                            <th class="text-center">TOTAL AMOUNT DUE</th>
+                                                            <th class="text-center">REMITTANCE NAME</th>
+                                                            <th class="text-center">SETTLED BY</th>
+                                                            <th class="text-center">REMARKS</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane show" id="tab-eg6-1" role="tabpanel"><p>
+                                            Coming soon...
+                                        </p></div>
+                                        <div class="tab-pane" id="tab-eg6-2" role="tabpanel"><p>
+                                            Coming soon...
+                                        </p></div>
+                                    </div>
+                                </div>
+                                <div class="d-block text-right card-footer">
+                                    <a href="javascript:void(0);" class="btn-wide btn btn-success">Save</a>
+                                </div>
                             </div>
                         </div>
                     </div>
