--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -624,6 +624,30 @@
             "order": [[1, 'asc']],
         });
 
+
+        var dtbl_office_supply = $("#tbl_office_supply").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/branches/all/office-supply/dt",
+                "dataSrc": function(json){
+                    $("#total_office_supply_tab").html("₱" + json.totalOfficeSupply);
+                    return json.data;
+                },
+                "data": function(d) {
+                    //d.date_from = $("#filter_tab2_date_from").val();
+                    //d.date_to = $("#filter_tab2_date_to").val();
+                }
+            },
+            "pageLength": 25,
+            "ordering": false,
+            "order": [[ 0, 'asc' ]],
+            "columnDefs": [
+            ],
+            "order": [[1, 'asc']],
+        });
         
     });
 </script>
@@ -989,7 +1013,7 @@
                             </div>
 
                             <div class="main-card mb-3 card" style="margin-top: 20px;">
-                                <div class="card-header"><i class="header-icon lnr-gift icon-gradient bg-grow-early"> </i>Utilities
+                                <div class="card-header"><i class="header-icon lnr-gift icon-gradient bg-grow-early"> </i>
                                     <div class="btn-actions-pane-right">
                                         <div class="nav">
                                             <a data-toggle="tab" href="#tab-eg6-0" class="border-0 btn-transition btn btn-outline-primary active show">
@@ -1070,7 +1094,53 @@
                                             </div>
                                         </div>
                                         <div class="tab-pane show" id="tab-eg6-1" role="tabpanel"><p>
-                                            Coming soon...
+                                            <div class="row">
+                                                <div class="col-lg-4 col-xl-4">
+                                                </div>
+                                                <div class="col-lg-4 col-xl-4">
+                                                    <div class="card mb-3 widget-content">
+                                                        <div class="widget-content-wrapper">
+                                                            <div class="widget-content-left">
+                                                                <div class="widget-heading">Total</div>
+                                                                <div class="widget-subheading"></div>
+                                                            </div>
+                                                            <div class="widget-content-right">
+                                                                <div class="widget-numbers text-success"><span id="total_office_supply_tab">₱ 0.00</span></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-xl-4">
+                                                </div>
+                                            </div>
+                                            <!-- <div class="form-row">
+                                                <div class="col-md-2 col-xs-2">
+                                                    <div class="position-relative form-group">
+                                                        <label for="filter_tab3_category" class="">Year</label>
+                                                        <select id="filter_tab3_category" class="form-control" required>
+                                                            <option value="">Choose...</option>
+                                                            <option value="">2022</option>
+                                                            <option value="">2021</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div> -->
+                                            <div style="margin-top: 10px;" class="table-responsive">
+                                                <table id="tbl_office_supply" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                                                    <thead>
+                                                        <tr>
+                                                            <th class="text-center">DATE</th>
+                                                            <th class="text-center">DESCRIPTION</th>
+                                                            <th class="text-center">UNIT PRICE</th>
+                                                            <th class="text-center">QTY</th>
+                                                            <th class="text-center">TOTAL AMOUNT DUE</th>
+                                                            <th class="text-center">SETTLED BY</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    </tbody>
+                                                </table>
+                                            </div>
                                         </p></div>
                                         <div class="tab-pane" id="tab-eg6-2" role="tabpanel"><p>
                                             Coming soon...
